--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -9,26 +9,30 @@
 </head>
 
 <body>
+  <!-- Logo section  -->
   <nav class="logoitem" style="grid-area: Navbar;">
     <div class="logo">
-      <span><img src="\assets\img\download.jpg" alt="l"></span>
+      <span><img src="\assets\img\Circular logo design.png" alt="l"></span>
       <span>
         <p>ServExpress</p>
       </span>
     </div>
   </nav>
-
+<!-- Title of the Page -->
   <div class="heading" style="grid-area: text;">
     <h1>
       <div class="light_heading">GET THE PROFESSIONALS</div>
       <div class="bold_heading">ON YOUR DOORSTEPS</div>
     </h1>
   </div>
+
+  <!-- Buttons for sign In and Sign out -->
   <div class="button_area" style="grid-area: Buttons;">
     <button class="sign-in">Sign In</button>
     <button class="sign-up">Sign Up</button>
 
   </div>
+  <!-- Image grid layout -->
   <div class="show_case" style="grid-area: Designs;">
     <img class="case_items  box1" 
       src="\assets\img\WhatsApp Image 2026-02-01 at 9.50.10 PM.jpeg" alt="show1">
