--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="landing.css">
-  <title>Document</title>
+  <title>ServExpress</title>
 </head>
 
 <body>
@@ -47,5 +47,7 @@
   </div>
 
 </body>
+
+<script src="landing.js"></script>
 
 </html>
