--- a/Login_page/login.html
+++ b/Login_page/login.html
@@ -29,6 +29,10 @@
        
       <label class="input-lables" for="password">Password</label>
       </div>
+      <div class="check-box">
+  <input id="remember" type="checkbox" >
+  <label for="remember">Remember me</label>
+</div>
       <div class="button">
       <button type="submit"><span class="text">Submit</span> <span class="icon">    <i class="bi bi-send"></i></span></button>
       </div>
