login_form_background_change

--- a/Login_page/login.html
+++ b/Login_page/login.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  
 <div class="page-description">
   <h1>ServExpress</h1>
   <p class="larger-text">Need for servies!</p>
@@ -40,7 +41,7 @@
     </form>
     <div class="new-account">
       
-    <a href="#">Create New Account</a>
+    <a href="/new_user/signUp.html">Create New Account</a>
   </div>
   </div>
 </body>
